Source/Alternet.UI/Native/GenericImage.Generated.cs

        
        public static int GetWidth(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetWidth_(handle);
        }
        
        public static int GetHeight(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetHeight_(handle);
        }
        
        public static Alternet.Drawing.SizeI GetSize(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetSize_(handle);
        }
        
        public static string GetOptionString(System.IntPtr handle, string name)
        {
            return NativeApi.GenericImage_GetOptionString_(handle, name);
        }
        
        public static int GetOptionInt(System.IntPtr handle, string name)
        {
            return NativeApi.GenericImage_GetOptionInt_(handle, name);
        }
        
        public static System.IntPtr GetSubImage(System.IntPtr handle, Alternet.Drawing.RectI rect)
        {
            return NativeApi.GenericImage_GetSubImage_(handle, rect);
        }
        
        public static int GetImageType(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetImageType_(handle);
        }
        
        public static bool HasAlpha(System.IntPtr handle)
        {
            return NativeApi.GenericImage_HasAlpha_(handle);
        }
        
        public static bool HasMask(System.IntPtr handle)
        {
            return NativeApi.GenericImage_HasMask_(handle);
        }
        
        public static bool HasOption(System.IntPtr handle, string name)
        {
            return NativeApi.GenericImage_HasOption_(handle, name);
        }
        
        public static bool IsOk(System.IntPtr handle)
        {
            return NativeApi.GenericImage_IsOk_(handle);
        }
        
        public static bool IsTransparent(System.IntPtr handle, int x, int y, byte threshold)
        {
            return NativeApi.GenericImage_IsTransparent_(handle, x, y, threshold);
        }
        
        public static bool LoadStreamWithBitmapType(System.IntPtr handle, InputStream stream, int bitmapType, int index)
        {
            return NativeApi.GenericImage_LoadStreamWithBitmapType_(handle, stream.NativePointer, bitmapType, index);
        }
        
        public static bool LoadFileWithBitmapType(System.IntPtr handle, string name, int bitmapType, int index)
        {
            return NativeApi.GenericImage_LoadFileWithBitmapType_(handle, name, bitmapType, index);
        }
        
        public static bool LoadFileWithMimeType(System.IntPtr handle, string name, string mimetype, int index)
        {
            return NativeApi.GenericImage_LoadFileWithMimeType_(handle, name, mimetype, index);
        }
        
        public static bool LoadStreamWithMimeType(System.IntPtr handle, InputStream stream, string mimetype, int index)
        {
            return NativeApi.GenericImage_LoadStreamWithMimeType_(handle, stream.NativePointer, mimetype, index);
        }
        
        public static bool SaveStreamWithMimeType(System.IntPtr handle, OutputStream stream, string mimetype)
        {
            return NativeApi.GenericImage_SaveStreamWithMimeType_(handle, stream.NativePointer, mimetype);
        }
        
        public static bool SaveFileWithBitmapType(System.IntPtr handle, string name, int bitmapType)
        {
            return NativeApi.GenericImage_SaveFileWithBitmapType_(handle, name, bitmapType);
        }
        
        public static bool SaveFileWithMimeType(System.IntPtr handle, string name, string mimetype)
        {
            return NativeApi.GenericImage_SaveFileWithMimeType_(handle, name, mimetype);
        }
        
        public static bool SaveFile(System.IntPtr handle, string name)
        {
            return NativeApi.GenericImage_SaveFile_(handle, name);
        }
        
        public static bool SaveStreamWithBitmapType(System.IntPtr handle, OutputStream stream, int type)
        {
            return NativeApi.GenericImage_SaveStreamWithBitmapType_(handle, stream.NativePointer, type);
        }
        
        public static bool CanRead(string filename)
        {
            return NativeApi.GenericImage_CanRead_(filename);
        }
        
        public static bool CanReadStream(InputStream stream)
        {
            return NativeApi.GenericImage_CanReadStream_(stream.NativePointer);
        }
        
        public static int GetDefaultLoadFlags()
        {
            return NativeApi.GenericImage_GetDefaultLoadFlags_();
        }
        
        public static string GetImageExtWildcard()
        {
            return NativeApi.GenericImage_GetImageExtWildcard_();
        }
        
        public static void AddHandler(System.IntPtr handler)
        {
            NativeApi.GenericImage_AddHandler_(handler);
        }
        
        public static void CleanUpHandlers()
        {
            NativeApi.GenericImage_CleanUpHandlers_();
        }
        
        public static System.IntPtr FindHandlerByName(string name)
        {
            return NativeApi.GenericImage_FindHandlerByName_(name);
        }
        
        public static System.IntPtr FindHandlerByExt(string extension, int bitmapType)
        {
            return NativeApi.GenericImage_FindHandlerByExt_(extension, bitmapType);
        }
        
        public static System.IntPtr FindHandlerByBitmapType(int bitmapType)
        {
            return NativeApi.GenericImage_FindHandlerByBitmapType_(bitmapType);
        }
        
        public static System.IntPtr FindHandlerByMime(string mimetype)
        {
            return NativeApi.GenericImage_FindHandlerByMime_(mimetype);
        }
        
        public static void InsertHandler(System.IntPtr handler)
        {
            NativeApi.GenericImage_InsertHandler_(handler);
        }
        
        public static bool RemoveHandler(string name)
        {
            return NativeApi.GenericImage_RemoveHandler_(name);
        }
        
        public static int GetImageCountInFile(string filename, int bitmapType)
        {
            return NativeApi.GenericImage_GetImageCountInFile_(filename, bitmapType);
        }
        
        public static int GetImageCountInStream(InputStream stream, int bitmapType)
        {
            return NativeApi.GenericImage_GetImageCountInStream_(stream.NativePointer, bitmapType);
        }
        
        public static System.IntPtr GetAlphaData(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetAlphaData_(handle);
        }
        
        public static System.IntPtr GetData(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetData_(handle);
        }
        
        public static bool CreateData(System.IntPtr handle, int width, int height, System.IntPtr data, bool static_data)
        {
            return NativeApi.GenericImage_CreateData_(handle, width, height, data, static_data);
        }
        
        public static bool CreateAlphaData(System.IntPtr handle, int width, int height, System.IntPtr data, System.IntPtr alpha, bool static_data)
        {
            return NativeApi.GenericImage_CreateAlphaData_(handle, width, height, data, alpha, static_data);
        }
        
        public static void SetAlphaData(System.IntPtr handle, System.IntPtr alpha, bool static_data)
        {
            NativeApi.GenericImage_SetAlphaData_(handle, alpha, static_data);
        }
        
        public static void SetData(System.IntPtr handle, System.IntPtr data, bool static_data)
        {
            NativeApi.GenericImage_SetData_(handle, data, static_data);
        }
        
        public static void SetDataWithSize(System.IntPtr handle, System.IntPtr data, int new_width, int new_height, bool static_data)
        {
            NativeApi.GenericImage_SetDataWithSize_(handle, data, new_width, new_height, static_data);
        }
        
        public static System.IntPtr LockBits(System.IntPtr handle)
        {
            return NativeApi.GenericImage_LockBits_(handle);
        }
        
        public static int GetStride(System.IntPtr handle)
        {
            return NativeApi.GenericImage_GetStride_(handle);
        }
        
        public static void UnlockBits(System.IntPtr handle)
        {
            NativeApi.GenericImage_UnlockBits_(handle);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr GenericImage_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color GenericImage_FindFirstUnusedColor_(System.IntPtr handle, byte startR, byte startG, byte startB);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImage_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageWithSize_(int width, int height, bool clear);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageFromFileWithBitmapType_(string name, int bitmapType, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageFromFileWithMimeType_(string name, string mimetype, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageFromStreamWithBitmapData_(IntPtr stream, int bitmapType, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageFromStreamWithMimeType_(IntPtr stream, string mimetype, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageWithSizeAndData_(int width, int height, System.IntPtr data, bool static_data);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr GenericImage_CreateImageWithAlpha_(int width, int height, System.IntPtr data, System.IntPtr alpha, bool static_data);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_DeleteImage_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_SetAlpha_(System.IntPtr handle, int x, int y, byte alpha);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_ClearAlpha_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_SetLoadFlags_(System.IntPtr handle, int flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_SetMask_(System.IntPtr handle, bool hasMask);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void GenericImage_SetMaskColor_(System.IntPtr handle, byte red, byte green, byte blue);
